# C-ROS-Automodel_Car

./: .gitignore  CONTRIBUTING.md  README.md
AutoModelRasp_ws/src/: README.md
AutoModelRasp_ws/src/ascamera/: README.md
AutoModelRasp_ws/src/auto_setup/: package.xml  setup.cfg  setup.py
AutoModelRasp_ws/src/auto_setup/launch/: all.launch.py  driving.launch.py  hardware.launch.py
AutoModelRasp_ws/src/com_stm/: package.xml  setup.cfg  setup.py
AutoModelRasp_ws/src/demo/: README.md  package.xml  setup.py
AutoModelRasp_ws/src/driving/: README.md  package.xml  setup.py
AutoModelRasp_ws/src/install/: local_setup.sh  setup.sh
AutoModelRasp_ws/src/lidar/: README.md  package.xml  setup.py
AutoModelRasp_ws/src/log/: latest_build
AutoModelRasp_ws/src/manual/: setup.py
AutoModelRasp_ws/src/parking/: package.xml  (+1 more)
hardware/: README.md
log/: latest_build
servidor/: cliente.py  interfaz.ui  interfaz_ui.py  servidor.py
simulacion_ws/: README.md  mejora_de_segmentacion.py
simulacion_ws/install/: local_setup.sh  setup.sh
simulacion_ws/install/carro_simulacion/share/carro_simulacion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simulacion_ws/install/carro_simulacion/share/carro_simulacion/launch/: car_sim.launch.py
simulacion_ws/install/carro_simulacion/share/carro_simulacion/urdf/: carro.urdf
simulacion_ws/install/carro_simulacion/share/carro_simulacion/worlds/: pista.world
simulacion_ws/log/: latest_build
stm_firmware/: README.md
stm_firmware/stm_com_rasp/: .cproject  .mxproject  .project  Integracion0.ioc
(+224 files in other folders)
